# wallet

./: AUTHENTICATION.md  BUILD.md  CMakeLists.txt  CONNECTIONS.md  GPIO_CONFIG.md  GPIO_SETUP.md  HAT_SETUP.md  INSTALL_LVGL.sh  INTEGRATION.md  Makefile  QUICKSTART.md  README.md  SPI_PINS.md  SUMMARY.md  WAVESHARE_INTEGRATION.md  find_gpio.sh  lv_conf.h  test_display.c  test_gpio.c  test_spi.c
auth/: device_binding.c  tropic_auth.c
display_driver/c/: Makefile  list.txt
display_driver/c/examples/: EPD_13in3_test.c  EPD_2in9_V2_test.c  ImageData2.c  main.c
display_driver/c/lib/Config/: DEV_Config.c  DEV_Config.h  dev_hardware_SPI.c  dev_hardware_SPI.h
display_driver/c/lib/e-Paper/: EPD_13in3.c  EPD_13in3.h  EPD_2in13_V4.c  EPD_2in13_V4.h  EPD_7in5_V2.c
display_driver/python/: readme_jetson_CN.txt  readme_jetson_EN.txt  readme_rpi_CN.txt  readme_sunrise_CN.txt  readme_sunrise_EN.txt
display_driver/python/examples/: epd_1in02_test.py  epd_1in64g_test.py  epd_2in13_V4_test.py  epd_2in13d_test.py  epd_2in36g_test.py  epd_2in7_V2_test.py  epd_3in0g_test.py  epd_4in37g_test.py  epd_7in3f_test.py  epd_7in3g_test.py
display_driver/python/lib/waveshare_epd/: epd2in13g.py  epd2in9_V2.py
drivers/: epaper_driver.c  gpio_driver.c
include/: device_binding.h  display_fbdev.h  gpio_config.h  tropic_auth.h  wallet_ui.h
src/: display_fbdev.c  main.c  wallet_ui.c
